--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Desenvolvedor Web - Web Designer - Desenvolvedor React</p>
+      <p class="masthead-subheading font-weight-light mb-0">Desenvolvedor Web - Front End</p>
 
     </div>
   </header>
