--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">Olá! Bem vindo ao site. Eu sou desenvolvedor web, apaixonado por esta área, amante do ecossistema/biblioteca React e desenvolvedor intermediário de PHP.</p>
+          <p class="lead">Olá! Bem vindo ao site. Eu sou desenvolvedor web, apaixonado por esta área, amante do ecossistema/biblioteca React, além disso utilizo um pouco de PHP.</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">Ao criar sites, procuro sempre estudar e me manter atualizado. HTML e CSS avançado, Javascript e React avançado são as minhas habilidades.</p>
+          <p class="lead">Ao criar sites, procuro sempre estudar e me manter atualizado, utilizando as melhores práticas. HTML e CSS avançados Javascript e React intermediários são as minhas habilidades.</p>
         </div>
       </div>
 
